# sheil

./: .gitignore  CONTRIBUTING.md  README.md  index.html  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  test-build.yml
.husky/: commit-msg  pre-commit
.zed/: settings.json
docs/: ARCHITECTURE.md
src/: App.svelte  app.css
src/lib/: commands.svelte.ts
src/lib/components/: terminal-view.svelte
src/tests/: DEPENDENCY_UPDATE_GUIDE.md  README.md  WALKTHROUGH.md  setup.ts
src/tests/integration/: hello-world.test.ts
src/tests/unit/: utils.test.ts
src/tests/unit/runes/: global-state.test.ts  prevent-default.test.ts  ssh-commands.test.ts
src/tests/unit/ui/: button.test.ts  card.test.ts  input.test.ts  lucide-icons.test.ts  terminal-view.test.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: keystore.rs  lib.rs  main.rs
tauri/src/commands/: default.rs  errors.rs  ssh.rs
