[package]
name = "sheil"
version = "0.1.0"
description = "Sheil — An open-source, cross-platform SSH/telnet/serial client and terminal manager"
authors = ["Sheil Contributors"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sheil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-keystore = "2.1.0-alpha.1"
tauri-plugin-background-service = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "2"
russh = "0.61"
russh-sftp = "2"
serialport = "4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
